--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,12 @@ Authors@R:
            family = "Cowgill",
            role = c("aut", "cre"),
            email = "mattcowgill@gmail.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           comment = c(ORCID = "0000-0003-0422-3300"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://github.com/MattCowgill/readrba
+BugReports: https://github.com/MattCowgill/readrba/issues
