--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: readrba
-Title: What the Package Does (One Line, Title Case)
+Title: Download and tidy RBA statistical tables
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Matt",
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "mattcowgill@gmail.com",
            comment = c(ORCID = "0000-0003-0422-3300"))
-Description: What the package does (one paragraph).
+Description: RBA data, but tidy
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -15,3 +15,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/MattCowgill/readrba
 BugReports: https://github.com/MattCowgill/readrba/issues
+Suggests: 
+    covr
