--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(download_rba)
 export(load_rba)
 export(read_rba)
 export(tidy_rba)
-importFrom(magrittr,"%>%")
+importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
