--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: readrba
 Title: Download and tidy RBA statistical tables
-Version: 0.0.0.9003
+Version: 0.0.0.9004
 Authors@R: 
     person(given = "Matt",
            family = "Cowgill",
@@ -29,6 +29,7 @@ Imports:
     tibble,
     stringr,
     curl,
-    httr
+    httr,
+    lubridate
 Depends: 
     R (>= 2.10)
