--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.9.2.1
 pkgdown: 1.6.0.9000
-pkgdown_sha: 2c210e86c82ea19f74c122c7329dad11a647e956
-articles: {}
-last_built: 2020-10-12T22:53Z
+pkgdown_sha: f3d5e4141b7893df4f0a122983f89a440d187625
+articles: []
+last_built: 2020-10-16T06:03Z
 
