--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ URL: https://github.com/MattCowgill/readrba
 BugReports: https://github.com/MattCowgill/readrba/issues
 Suggests: 
     covr,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Imports: 
     readxl,
     tidyr,
@@ -34,3 +36,4 @@ Imports:
     lubridate
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
