--- a/.github/workflows/R-CMD-check-windows.yaml
+++ b/.github/workflows/R-CMD-check-windows.yaml
@@ -2,7 +2,7 @@
 # https://community.rstudio.com/new-topic?category=Package%20development&tags=github-actions
 on: [push, pull_request]
 
-name: R-CMD-check
+name: R-CMD-check-windows
 
 jobs:
   R-CMD-check:
