--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Suggests:
     rmarkdown
 Imports: 
     readxl,
-    tidyr,
+    tidyr (>= 1.0.0),
     dplyr,
     purrr,
     rlang,
@@ -33,8 +33,7 @@ Imports:
     stringr,
     curl,
     httr,
-    lubridate,
-    readr
+    lubridate
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
