--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(browse_rba_series)
 export(browse_rba_tables)
 export(read_rba)
+export(read_rba_seriesid)
 export(tidy_rba)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
