--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%>%")
 export(browse_rba_series)
 export(browse_rba_tables)
+export(rba_list_tables)
+export(rba_stat_table)
 export(read_rba)
 export(read_rba_local)
 export(read_rba_seriesid)
