--- a/.github/workflows/R-CMD-check-cron.yaml
+++ b/.github/workflows/R-CMD-check-cron.yaml
@@ -9,15 +9,15 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-  runs-on: macOS-latest
-steps:
-  - uses: actions/checkout@v2
-- uses: r-lib/actions/setup-r@master
-- name: Install dependencies
-run: |
-  install.packages(c("remotes", "rcmdcheck"))
-remotes::install_deps(dependencies = TRUE)
-shell: Rscript {0}
-- name: Check
-run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
-shell: Rscript {0}
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-r@v1
+      - name: Install dependencies
+        run: |
+          install.packages(c("remotes", "rcmdcheck"))
+          remotes::install_deps(dependencies = TRUE)
+        shell: Rscript {0}
+      - name: Check
+        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
+        shell: Rscript {0}
