--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(rba_forecasts)
 export(rba_list_tables)
 export(rba_stat_table)
 export(read_cashrate)
+export(read_forecasts)
 export(read_rba)
 export(read_rba_local)
 export(read_rba_seriesid)
