--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-URL: https://github.com/MattCowgill/readrba
+URL: https://mattcowgill.github.io/readrba/index.html
 BugReports: https://github.com/MattCowgill/readrba/issues
 Suggests: 
     covr,
