--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,9 @@ Suggests:
     rmarkdown,
     ggplot2
 Imports: 
-    readxl,
+    readxl (>= 1.3.0),
     tidyr (>= 1.0.0),
-    dplyr,
+    dplyr (>= 1.0.0),
     purrr,
     rlang,
     xml2,
