--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,7 @@ Imports:
     rvest (>= 0.3.6),
     stringr,
     httr,
-    lubridate,
-    curl
+    lubridate
 Depends: 
     R (>= 3.6.0)
 VignetteBuilder: knitr
