--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
 Package: readrba
 Title: Download and Tidy Data from the Reserve Bank of Australia
-Version: 0.1.1.900
+Version: 0.1.1.901
 Authors@R: 
+    c(
     person(given = "Matt",
            family = "Cowgill",
            role = c("aut", "cre"),
            email = "mattcowgill@gmail.com",
-           comment = c(ORCID = "0000-0003-0422-3300"))
+           comment = c(ORCID = "0000-0003-0422-3300")),
+    person(given = "Angus",
+           family = "Moore",
+           role = "ctb")
+           )
 Description: Download up-to-date data from the Reserve Bank of Australia 
     in a tidy data frame. Package includes functions to download current and 
     historical statistical tables 
