use github PAT in actions

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,6 +8,9 @@ jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     strategy:
